# cough-segmentation

./: LICENSE  README.md
src/: .gitignore  cough_segmentation_tool.py  example.ipynb  pyproject.toml
