[tool.poetry]
name = "cough-segmentation-tool"
version = "1.0.2"
description = "A novel cough audio pre-processing tool for medical researchers."
authors = ["Alice <aliceevelynashby@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
librosa = "^0.9.1"
SoundFile = "^0.10.3"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
tqdm = "^4.63.0"
scikit-learn = "^1.0.2"
ipython = "^8.1.1"
pandas = "^1.4.1"
scipy = "^1.8.0"
seaborn = "^0.11.2"
ipykernel = "^6.9.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
